# CMakeBoost

./: .gitignore  CMakeLists.txt  LICENSE  README.md  cmakeboost  cmakeboost.yaml  setup.py
src/: main.cpp
